# CPP_Qt_StockCharts

./: CMakeLists.txt
src/: main.cc
src/model/approximation/: Approximation.cc  Approximation.h
src/model/csv/: CsvManager.cc  CsvManager.h
src/model/interpolation/: interpolation.cc  interpolation.hpp  main.cc
src/model/sle/: Sle.cc  Sle.h
src/view/: view.cc  view.hpp  view.ui
